Add HTTP status in all endpoints
